--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,29 @@
     right: 20px;
     background-image: url(../images/right.png);
 }
+.slides-navigation{
+	z-index: 6;
+}
+.titleMessage {
+	position: absolute;
+	width: 100%;
+	height: 250px;
+	top: 50%;
+	z-index: 5;
+	text-align: center;
+	margin-top: -125px;
+}
+.titleMessage .heading p {
+	color: #ffff;
+	text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+	font-weight: 100;
+	letter-spacing: 7px;
+}
+.titleMessage .heading .main{
+	font-size: 50px;
+
+}
+.titleMessage .heading .sub{
+	font-size: 23px;
+	
+}
